selfhost/test/typechecker/binary/or_eq_error.1.out
Error at %FILE_NAME%:2:3
Illegal operator
  |  a ||= 15
       ^
No operator '||' exists between types Bool and Int
